# ardrone_rrt_avoid

./: 20131102-013931:1.0:1.0:0.8:nav.txt  20131102-015141:3.0:1.4:0.8:dubin.txt  20131102-015141:3.0:1.4:0.8:nav.txt  20131103-160212:1.0:0.0:0.8:nav.txt  20131104-162201:1.0:0.0:0.8:nav.txt  20131104-163711:3.0:3.0:0.8:dubin.txt  20131104-173357:2.0:2.0:0.8:nav.txt  20131104-175823:2.5:2.5:1.3:nav.txt  20131104-175926:2.5:2.5:1.3:nav.txt  20131104-180706:2.5:0.0:1.3:dubin.txt  20131104-181534:2.5:2.5:1.3:nav.txt  20131104-181815:2.5:2.5:1.3:nav.txt  CMakeLists.txt  ROS_10.sh  ROS_11.sh  ROS_one11.sh  ROS_other10.sh  ardroneA_launch.sh  ardroneB_launch.sh  dubin_launch.sh  manifest.xml  plan_launch.sh  record_4.txt  record_launch.sh  setup.sh  sim_plan_launch.sh  test_launch.sh
data/: 20131102-014428:1.0:1.0:0.8:nav.txt  20131102-015451:3.0:1.4:0.8:nav.txt  20131103-160418:1.0:0.0:0.8:nav.txt  20131103-160635:0.1:0.0:0.8:nav.txt  20131103-160728:0.5:0.0:0.8:nav.txt  20131104-161634:1.0:0.0:0.8:nav.txt  20131104-161825:1.0:0.0:0.8:nav.txt  20131104-162001:1.0:0.0:0.8:nav.txt  20131104-162421:1.0:0.0:0.8:nav.txt  20131104-163255:1.0:0.0:0.8:nav.txt  20131104-163419:1.0:0.0:0.8:nav.txt  20131104-163711:3.0:3.0:0.8:nav.txt  20131104-164045:2.0:2.0:0.8:nav.txt  20131104-165247:2.0:2.0:0.8:dubin.txt  20131104-165407:2.0:2.0:0.8:nav.txt  20131104-172749:2.0:2.0:0.8:nav.txt  20131104-173748:2.0:2.0:0.8:nav.txt  20131104-174126:2.0:2.0:0.8:nav.txt  20131104-174309:2.0:2.0:1.3:nav.txt  20131104-174438:2.0:2.0:1.3:nav.txt  20131104-174709:2.0:2.0:1.3:dubin.txt  20131104-174709:2.0:2.0:1.3:nav.txt  20131104-175529:2.0:2.0:1.3:nav.txt  20131104-175720:2.5:2.5:1.3:nav.txt  20131104-175926:2.5:2.5:1.3:dubin.txt  20131104-180046:2.5:2.5:1.3:nav.txt  20131104-180336:2.5:0.0:1.3:nav.txt  20131104-180457:2.5:0.0:1.3:nav.txt  20131104-180541:2.5:0.0:1.3:nav.txt  20131104-180706:2.5:0.0:1.3:nav.txt  20131104-181055:1.0:1.0:1.3:nav.txt  20131104-181208:1.0:1.0:1.3:nav.txt  20131104-181320:1.0:1.0:1.3:dubin.txt  20131104-181320:1.0:1.0:1.3:nav.txt  20131105-164823:1.0:0.0:0.8:nav.txt  20131105-165321:1.0:0.0:0.8:nav.txt  20131106-195731:1.0:0.0:0.8:nav.txt  20131106-195915:1.0:0.0:0.8:nav.txt  20131106-200248:1.0:1.0:0.8:nav.txt  20131106-200604:1.0:1.0:0.8:nav.txt  (+1933 more)
launch/: ardrone_driver.launch  exe_host.launch  exe_intruder.launch  joy_node.launch  parrot_plan.launch  yucong_flight_simple.launch
msg/: ArdroneState_msg.msg  DubinPath_msg.msg  DubinSeg_msg.msg  Dubin_msg.msg  QuadState_msg.msg
params/: bird_param.xml
src/OthersMonitor/: OthersMonitor.cpp  OthersMonitor.hpp
src/QuadConfig/: QuadConfig.cpp  QuadConfig.hpp  main.cpp
src/UavState/: GSnode.h  GeneralState.h  QuadState.cpp  QuadState.h  test_update.cpp
src/VirtualQuad/: ObsLog.h  QuadCfg.h  QuadState.h  ReplanNode.cpp  ReplanNode.hpp  VirtualQuad.hpp  VirtualQuad_basic.cpp  VirtualQuad_dubin.cpp  VirtualQuad_tree.cpp  main_replanNode.cpp  main_tree.cpp  quadDubins3D.h  quadNode.h
src/YlClRRT/: YlClRRT.cpp  YlClRRT.hpp  main_bird_tree.cpp  main_line.cpp  main_test.cpp  main_tree.cpp
src/exe_node/: ParrotExe.cpp  ParrotExe.hpp  main_dubin.cpp  main_fly.cpp  main_host.cpp  main_intruder.cpp  main_path.cpp  main_record.cpp  main_sim_path.cpp  main_test.cpp
src/jesus_codes/atlante/: CMakeLists.txt
src/jesus_codes/include/: config_Mydrone.h
src/jesus_codes/include/controller/config/parrot/: config_controller_Parrot.h
src/jesus_codes/include/controller/other/: PID.h
src/matlab_codes/: compare_virtual_multi.m  draw_compare.m  draw_compare_virtual.m  draw_dubin.m  draw_dubin_virtual.m  draw_path.m  draw_path_move.m  draw_traj.m  multi_compare.m  path_only.m  plan_multi.m  plot_velocity.m  process_draw.m  process_draw_line.m  sample_draw.m
src/plan_node/: ParrotPlan.cpp  ParrotPlan.hpp  main_plan.cpp  single_path.cpp
src/user_types/: ObsCollect.h  ObsLog.h  SpaceLimit.h  checkParas.h  obstacle2D.h  obstacle3D.h  point2D.h
src/user_types/Dubins2D/: dubins.cpp
src/user_types/ObsUpdater/: ObsUpdater.hpp  ObsUpdaterReal.cpp  ObsUpdaterReal.hpp  ObsUpdaterVirtual.cpp  ObsUpdaterVirtual.hpp
src/user_types/Sampler/: Sampler.cpp  Sampler.hpp  SamplerPole.cpp  SamplerPole.hpp  SamplerRect.cpp  SamplerRect.hpp
src/user_types/Sampler3D/: SampleParas3D.h  Sampler3D.cpp  Sampler3D.hpp
src/user_types/Sampler3Da/: Sampler3Da.cpp  Sampler3Da.hpp  main_test.cpp
src/user_types/UavBehavior/: ArdroneBehavior.cpp  ArdroneBehavior.hpp  BirdBehavior.cpp  BirdBehavior.hpp  GeneralBehavior.hpp
src/user_types/UavConfig/: ArdroneConfig.cpp  ArdroneConfig.h  BirdConfig.cpp  BirdConfig.h  GeneralConfig.h
src/user_types/UavState/: ArdroneState.cpp  ArdroneState.h  BirdState.cpp  BirdState.h  GSnode.h  GeneralState.h  test_update.cpp
src/utils/: CircleVelocity.cpp  CircleVelocity.h  CollectCheck.cpp  CollectCheck.h  ColliCheck.cpp  ColliCheck.h  DubinsSubCheck.cpp  DubinsSubCheck.h  DubinsTotalCheck.cpp  DubinsTotalCheck.h  GetRho.cpp  GetRho.h  LineVelocity.cpp  LineVelocity.h  NotInRadius.cpp  NotInRadius.h  PointInPoly.cpp  PointInPoly.h  QuatRPY.cpp  QuatRPY.h  SingleCheck.cpp  SingleCheck.h  systemtime.cpp  systemtime.h  test_DubinsTotalCheck.cpp
virtual_obs/: static1.txt  static2.txt  v-1.0_t5.0.txt  v-1.0_t6.0.txt  v-1.0_t7.0.txt  v-1.0_t8.0.txt  v-2.0_t5.0.txt  v-2.0_t6.0.txt  v-2.0_t7.0.txt  v-2.0_t8.0.txt  v1.0_t5.0.txt  v1.0_t6.0.txt  v1.0_t6.0_rot.txt  v1.0_the-0.8.txt  v1.0_the0.0.txt  v1.0_the0.8.txt  v2.0_t5.0.txt  v2.0_t6.0_rot.txt  v2.0_the0.0.txt  v2.0_the0.8.txt  v3.0_the0.0.txt  v3.0_the0.8.txt  v4.0_t5.0.txt  v4.0_the-0.8.txt  v4.0_the0.0.txt  v4.0_the0.8.txt
